--- a/.github/workflows/nvhpc-24.7-auto.yml
+++ b/.github/workflows/nvhpc-24.7-auto.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install System dependencies
+      - name: Install dependencies
         run: |
           sudo apt update
           sudo apt install -y build-essential wget unzip vim curl
