--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -3,18 +3,18 @@ name: win
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: windows-latest
     steps:
       - name: get
         run: |
-          curl -s -O -L  https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.zip
-          unzip -q snapshot-1.14.5.zip
+          curl -s -O -L  https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/hdf5-1.14.5.zip
+          unzip -q hdf5-1.14.5.zip        
       - name: test
         run: |
-          cd  hdf5-1.14.5-2
+          cd  hdf5-1.14.5
           mkdir build
           cd build
           cmake -DSITE:STRING=win -DBUILDNAME:STRING="5/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
