--- a/.github/workflows/i386-alp.yml
+++ b/.github/workflows/i386-alp.yml
@@ -1,16 +1,22 @@
-runs-on: ubuntu-latest
-steps:
-  - uses: actions/checkout@v4
+on:
+  push:
+    branches:
+      - main-
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-  - name: setup alpine
-    uses: jirutka/setup-alpine@v1
-    with:
-      arch: x86
-      packages: >
-        build-base
-        libgit2-dev
-        cmake
-  - name: run script
-    run: |
-      cat /etc/os-release
-    shell: bash
+      - name: setup alpine
+        uses: jirutka/setup-alpine@v1
+        with:
+          arch: x86
+          packages: >
+            build-base
+            libgit2-dev
+            cmake
+      - name: run script
+        run: |
+          cat /etc/os-release
+        shell: bash
