--- a/.github/workflows/i386-alp.yml
+++ b/.github/workflows/i386-alp.yml
@@ -22,4 +22,11 @@ jobs:
       - name: run script
         run: |
           cat /etc/os-release
+          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/hdf5-1.14.5.tar.gz
+          tar zxvf hdf5-1.14.5.tar.gz
+          cd hdf5-1.14.5	
+          mkdir build
+          cd build
+          cmake -DSITE:STRING=alp.i386 -DBUILDNAME:STRING="5/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
+          ctest -D Experimental -C Release	  
         shell: bash
