--- a/.github/workflows/i386-alp-e-f.yml
+++ b/.github/workflows/i386-alp-e-f.yml
@@ -1,9 +1,9 @@
-name: i386 alp f
+name: i386 alp e f
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -15,6 +15,7 @@ jobs:
         uses: jirutka/setup-alpine@v1
         with:
           arch: x86
+          branch: edge
           packages: >
             build-base
             libgit2-dev
@@ -27,7 +28,7 @@ jobs:
           cd hdf5-1.14.5
           mkdir build
           cd build
-          cmake -DSITE:STRING=alp.i386 \
+          cmake -DSITE:STRING=alp-e.i386 \
             -DBUILDNAME:STRING="5/r/f" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
