--- a/.github/workflows/arm64.yml
+++ b/.github/workflows/arm64.yml
@@ -2,7 +2,7 @@ name: arm64
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -14,14 +14,14 @@ jobs:
         os:
           - name: openbsd
             architecture: arm64
-            version: '7.4'
+            version: '7.6'
             host: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@v0.23.0
+        uses: cross-platform-actions/action@master
         env:
           FOO: A
           BAR: B
