--- a/.github/workflows/fbsd-j-ae.yml
+++ b/.github/workflows/fbsd-j-ae.yml
@@ -2,7 +2,7 @@ name: fbsd j ae
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test:
@@ -27,6 +27,8 @@ jobs:
           run: |
             sudo pkg install -y cmake
             sudo pkg install -y libaec
+            ls /usr/local/include/
+            ls /usr/include
             sudo pkg install -y openjdk21
             sudo pkg install -y perl5
             export JAVA_HOME=/usr/local/openjdk21
