--- a/.github/workflows/mac_fr.yml
+++ b/.github/workflows/mac_fr.yml
@@ -24,6 +24,6 @@ jobs:
           cd build
           cmake -G Ninja \
             -DHDF5_BUILD_FRAMEWORKS:BOOL=ON \
-            -DSITE:STRING="${{ matrix.os }}" -DBUILDNAME:STRING="fr" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5"            
+            -DSITE:STRING="${{ matrix.os }}" -DBUILDNAME:STRING="fr" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
             ..
           ctest -D Experimental
