--- a/.github/workflows/lin_sta_onl.yml
+++ b/.github/workflows/lin_sta_onl.yml
@@ -41,7 +41,8 @@ jobs:
             -DHDF5_ONLY_SHARED_LIBS:BOOL=OFF \
             -DHDF5_BUILD_STATIC_TOOLS:BOOL=ON \
             -DBUILD_STATIC_EXECS:BOOL=ON \
+            -DHDF5_BUILD_CPP_LIB:BOOL=ON \
             -DHDF5_BUILD_FORTRAN:BOOL=ON \
-            -DSITE:STRING="${{ matrix.os }}" -DBUILDNAME:STRING="fr" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
+            -DSITE:STRING="${{ matrix.os }}" -DBUILDNAME:STRING="st/cpp" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
             ..
           ctest -D Experimental
