--- a/.github/workflows/lin_sta_onl_ci.yml
+++ b/.github/workflows/lin_sta_onl_ci.yml
@@ -18,9 +18,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-         os: [ubuntu-24.04]
-#        os: [ubuntu-24.04, ubuntu-22.04]
-#        os: [ubuntu-24.04, ubuntu-22.04, ubuntu-24.04-arm]
+        os: [ubuntu-24.04, ubuntu-22.04, ubuntu-24.04-arm]
     steps:
       - name: Install Dependencies
         run: |
