--- a/.github/workflows/lin_sta_onl_ci.yml
+++ b/.github/workflows/lin_sta_onl_ci.yml
@@ -3,7 +3,7 @@ name: Linux Static-Only Build CI
 on:
   workflow_dispatch:
   push:
-    branches: main
+    branches: main-
 
 permissions:
   contents: read
