--- a/.github/workflows/amd64_mac-15.yml
+++ b/.github/workflows/amd64_mac-15.yml
@@ -2,7 +2,7 @@ name: amd64 mac-15 fr fd
 
 on:
   push:
-    branches: main
+    branches: main-
 
 jobs:
   build:
@@ -15,9 +15,6 @@ jobs:
         uses: actions/checkout@v5
         with:
           repository: HDFGroup/hdf5
-      - name: install
-        run: |
-          brew install ninja
       - name: test
         run: |
           mkdir build
