--- a/.github/workflows/haiku.yml
+++ b/.github/workflows/haiku.yml
@@ -35,6 +35,9 @@ jobs:
             cd build
             cmake -DCMAKE_BUILD_TYPE=Release \
             -DBUILDNAME="r" \
-            -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
-            ctest -T Build  -j
-            ctest -T Test  -j
+            -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
+            -DSITE:STRING="${{ matrix.os }}" \
+            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+            -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
+            ..
+            ctest -D Experimental
