--- a/.github/workflows/haiku.yml
+++ b/.github/workflows/haiku.yml
@@ -33,6 +33,7 @@ jobs:
             pkgman install -y cmake
             mkdir build
             cd build
+            export CFLAGS='-fPIC'
             cmake -DCMAKE_BUILD_TYPE=Release \
             -DBUILDNAME="r" \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
