--- a/.github/workflows/haiku.yml
+++ b/.github/workflows/haiku.yml
@@ -34,7 +34,8 @@ jobs:
             mkdir build
             cd build
             export CFLAGS='-fPIC'
-            cmake -DCMAKE_BUILD_TYPE=Release \
+            cmake -DCMAKE_C_FLAGS="-fPIC ${CMAKE_C_FLAGS}" \
+            -DCMAKE_BUILD_TYPE=Release \
             -DBUILDNAME="r" \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
             -DSITE:STRING="haiku" \
