--- a/.github/workflows/ora-10.yml
+++ b/.github/workflows/ora-10.yml
@@ -14,10 +14,9 @@ jobs:
         uses: actions/checkout@v5
         with:
           repository: HDFGroup/hdf5
-      - name: install
-        run: dnf install -y gfortran
       - name: test
         run: |
+          dnf install -y gfortran
           mkdir build
           cd build
           cmake \
