--- a/.github/workflows/ora-10.yml
+++ b/.github/workflows/ora-10.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: "oracle:10"
+    container: "oraclelinux:10"
     steps:
       - name: checkout
         uses: actions/checkout@v5
