--- a/.github/workflows/ora-10.yml
+++ b/.github/workflows/ora-10.yml
@@ -1,4 +1,4 @@
-name: ora-10 hdf5
+name: ora-10
 
 on:
   push:
@@ -16,16 +16,12 @@ jobs:
           repository: HDFGroup/hdf5
       - name: test
         run: |
-          dnf install -y cmake g++ gfortran
+          dnf install -y cmake
           mkdir build
           cd build
           cmake \
             -DSITE:STRING="ora-10" \
-            -DBUILDNAME:STRING="cpp/f/h/mp" \
+            -DBUILDNAME:STRING="r" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DHDF5_BUILD_CPP_LIB:BOOL=ON \
-            -DHDF5_BUILD_FORTRAN:BOOL=ON \
-            -DHDF5_BUILD_HL_LIB:BOOL=ON \
-            -DHDF5_ENABLE_MAP_API:BOOL=ON \
             ..
           ctest -D Experimental
